--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 
+0.1.3
+
+ * attempted to bring all dependencies into the new
+   world of n-util
+
 0.1.2
 
  * Swapped util for n-util in response to new Node module
