Revised to comply more closely to JSGI, particularly using pathInfo and scriptName for routing. As a result, an angel has died.

--- a/README
+++ b/README
@@ -12,8 +12,10 @@ component.
 The General Idea
 ================
 
-    var HTTP = require("q-http");
     var JAQUE = require("jaque");
+    var Q = require("q"); // from npm
+    var HTTP = require("q-http"); // from npm
+    var SYS = require("sys"); // from node
 
     var app = JAQUE.Branch({
         "": JAQUE.Method({
@@ -23,15 +25,27 @@ The General Idea
                     "headers": {"content-type": "text/plain"},
                     "body": ["Hello, World!\r\n"]
                 };
-            })
+            }
         })
     }, JAQUE.notFound);
+
+    app = JAQUE.Decorators([
+        JAQUE.Log,
+        JAQUE.Error,
+        JAQUE.ContentLength
+    ], app);
+
+    var server = HTTP.Server(app);
+    var listening = server.listen(8080);
+    Q.when(listening, function () {
+        SYS.puts("Listening on 8080.");
+    }, Q.error);
 
 
 Installation
 ============
 
-    npm install jaque
+    npm install jaque q q-http
 
 
 The API
