--- a/CHANGES
+++ b/CHANGES
@@ -1,25 +1,32 @@
 
+0.1.5
+
+ - revised in coordination with q-http to be closer
+   to JSGI compliance, using scriptName and pathInfo.
+ - added request inspector test server.
+ - fixed the README example code.
+ 
 0.1.4
 
- * synced dependencies
+ - synced dependencies
 
 0.1.3
 
- * attempted to bring all dependencies into the new
+ - attempted to bring all dependencies into the new
    world of n-util
 
 0.1.2
 
- * Swapped util for n-util in response to new Node module
+ - Swapped util for n-util in response to new Node module
    name conflict.
 
 0.1.0
 
- * Reorganized for NPM
+ - Reorganized for NPM
 
 0.0.1
 
- * Renamed ComponentMap back to Branch
- * Renamed Redirect to PermanentRedirect
- * Introduced TemporaryRedirect
- * Intorduced PostJson
+ - Renamed ComponentMap back to Branch
+ - Renamed Redirect to PermanentRedirect
+ - Introduced TemporaryRedirect
+ - Introduced PostJson
