--- a/README
+++ b/README
@@ -8,6 +8,9 @@ sessions, static file trees, common content types, and
 middleware.  The Q-HTTP package provides the basic server
 component.
 
+I would have called this ``q-jack`` but ``jaque`` made me
+chuckle inside.
+
 
 The General Idea
 ================
@@ -15,7 +18,6 @@ The General Idea
     var JAQUE = require("jaque");
     var Q = require("q"); // from npm
     var HTTP = require("q-http"); // from npm
-    var SYS = require("sys"); // from node
 
     var app = JAQUE.Branch({
         "": JAQUE.Method({
@@ -38,7 +40,7 @@ The General Idea
     var server = HTTP.Server(app);
     var listening = server.listen(8080);
     Q.when(listening, function () {
-        SYS.puts("Listening on 8080.");
+        console.log("Listening on 8080.");
     }, Q.error);
 
 
