--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,9 @@ in the next major, backward-incompatible release.
 History
 -------
 
+0.1.11
+ - Added ``text/cache-manifest`` to the ``.manifest`` MIME mapping.
+
 0.1.10
  - WARNING: Removed ``ContentLength`` until further notice.  It is
    presently broken.
