--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,9 @@ in the next major, backward-incompatible release.
 History
 -------
 
+0.1.16
+ - Synchronized dependency for q-fs bug fix for binary encoding.
+
 0.1.12
  - Added ``Headers`` middleware for adding headers unspecified by an
    application.
