--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,9 @@ in the next major, backward-incompatible release.
 History
 -------
 
+0.1.21
+ - Syntax fix that should have not made it to publication without testing.
+
 0.1.20
  - Added support for redirecting entire subtrees where
    symbolic links are involved, optionally permanently.
